# src/iM.Cloud.Application/Files/CreateFolderRequest.cs
@@ -1,0 +1,7 @@
+namespace iM.Cloud.Application.Files;
+
+public sealed class CreateFolderRequest
+{
+    public string Name { get; set; } = null!;
+    public Guid? ParentId { get; set; }
+}
